--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.1.0",
     "babel-preset-expo": "~8.1.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -33,7 +35,19 @@
     "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4",
-    "prettier": "^2.0.5"
+    "jest": "^26.1.0",
+    "jest-expo": "^38.0.2",
+    "prettier": "^2.0.5",
+    "react-test-renderer": "^16.13.1"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native)/"
+    ]
+  }
 }
