--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "firebase": "^7.16.0",
     "prop-types": "^15.7.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
